--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,17 @@ body {
 ::-webkit-scrollbar {
   display: none;
 }
+select {
+  appearance: none;
+}
+
+input[type="file"] {
+  color: transparent;
+  background-color: transparent;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
