--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* fix html2canvas */
 @layer base {
   img {
     @apply inline-block;
@@ -10,34 +12,19 @@ html,
 body {
   @apply text-white;
   background-color: #2f3136;
-  /* height: 100vh; */
 }
-@layer base {
-  input[type="number"]::-webkit-inner-spin-button,
-  input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+
+@layer components {
+  .container {
+    @apply max-w-5xl;
   }
 }
 
 ::-webkit-scrollbar {
   display: none;
 }
+
+/* disable select arrow */
 select {
   appearance: none;
-}
-
-input[type="file"] {
-  color: transparent;
-  background-color: transparent;
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  opacity: 0;
-}
-dialog:modal {
-  max-width: 100vw;
-  /* max-height: 100vw; */
 }
